# hetach

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  mkdocs.yml
docker/: Dockerfile.template  generateDockerfile.sh
docs/: Usage.md  WebServers.md  changelog.md  fast-cgi.md  index.md  integration.md  quick-start.md  web-servers.md  whats-hetach.md
ext/gtest/: CMakeLists.txt
include/: application.h  fcgiapplication.h
include/api-rest/: apirest.h  entity.h  entitycollection.h  resource.h  restcontroller.h
include/hetach/: application.h
include/hetach/api-rest/: apirest.h  entity.h  entitycollection.h  entitynotfoundexception.h  exception.h  resource.h  restcontroller.h
include/hetach/http/: request.h  response.h
include/hetach/http-kernel/: controller.h  controllerresolver.h  headernotfoundexception.h  kernel.h  methodunknownexception.h
include/hetach/router/: compiledroute.h  paramnotfoundexception.h  params.h  resource.h  route.h  routecompiler.h  router.h
include/hetach/server/: fcgiserver.h  webserver.h
include/http/: header.h  request.h  response.h
include/http-kernel/: controller.h  controllerresolver.h  header.h  kernel.h  methodnotimplementedexception.h  request.h  response.h
include/router/: compiledroute.h  params.h  resource.h  resourcenotfoundexception.h  route.h  routecompiler.h  routepart.h  router.h
include/server/: fcgiserver.h  server.h  webserver.h
scripts/: check.sh  copyrightChecker.sh  fixCopyright.sh
src/: application.cpp  fcgiapplication.cpp
src/api-rest/: apirest.cpp  entity.cpp  entitycollection.cpp  resource.cpp  restcontroller.cpp
src/http/: header.cpp  request.cpp  response.cpp
src/http-kernel/: controller.cpp  controllerresolver.cpp  header.cpp  kernel.cpp  request.cpp  response.cpp
src/router/: compiledroute.cpp  params.cpp  resource.cpp  route.cpp  routecompiler.cpp  routepart.cpp  router.cpp
src/server/: fcgiserver.cpp  webserver.cpp
tests/http/: headertest.cpp  requesttest.cpp  responsetest.cpp
tests/http-kernel/: headertest.cpp  requesttest.cpp  responsetest.cpp
tests/http-kernel/fixtures/: headerfixture.h  requestfixture.h  responsefixture.h
tests/http/fixtures/: headerfixture.h  requestfixture.h  responsefixture.h
tests/router/: compiledroutetest.cpp  resourcetest.cpp  routecompilertest.cpp  routertest.cpp  routetest.cpp
tests/router/fixtures/: compiledroutefixture.h  resourcefixture.h  routecompilerfixture.h  routerfixture.h
